# sdk-generator

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
sdk-generator/: __main__.py  generator.py
sdk_generator/: __main__.py  generator.py  monkey_patch.py
sdk_generator/templates/: apiconfig_pydantic_2.jinja2  constants-default.jinja2  requests.jinja2  service.jinja2
templates/: apiconfig_pydantic_2.jinja2  service.jinja2
tests/: constants.jinja2  test_apiconfig_basic_auth.py  test_cli.py  test_endpoints_return_response.py  test_enum_serialization.py  test_monkey_patch.py  test_shared_primitive_refs.py  test_union_types.py
