[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-generator"
version = "1.1.0"
description = "A Python SDK generator from OpenAPI specifications."
dynamic = ["dependencies"]
authors = [{ name = "Maxime Toussaint", email = "maxime.toussaint@tlmgo.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["sdk", "api", "openapi", "generator", "codegen"]

[project.scripts]
sdk-generator = "sdk_generator.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["sdk_generator*"]

[tool.setuptools.package-data]
sdk_generator = ["templates/**/*"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
  '''

[tool.ruff]
line-length = 88
target-version = "py313"
lint.ignore = [
'E501',
]

[tool.isort]
profile = "black"
filter_files = true
